# SCP-PRAC-3

./: CMakeLists.txt  NBody  NBody_GUI  Queens.h  gmon.out  makefile  nbfast.c
res/: galaxy_1000B_1000i.out  galaxy_1000B_1000i_final.out  galaxy_1000B_100i_final.out  galaxy_1000B_200i.out  galaxy_1000B_200i_final.out  galaxy_1000B_300i.out  galaxy_1000B_400i.out  galaxy_1000B_500i.out  galaxy_1000B_600i.out  galaxy_1000B_700i.out  galaxy_1000B_800i.out  galaxy_1000B_900i.out  galaxy_1000B_initial.out  galaxy_100B_1000i.out  galaxy_100B_1000i_final.out  galaxy_100B_100i.out  galaxy_100B_200i.out  galaxy_100B_292i_final.out  galaxy_100B_300i.out  galaxy_100B_400i.out  galaxy_100B_500i.out  galaxy_100B_600i.out  galaxy_100B_700i.out  galaxy_100B_800i.out  galaxy_100B_900i.out  galaxy_100B_initial.out  galaxy_98B_1000i.out  galaxy_98B_900i.out  galaxy_98B_901i.out  galaxy_98B_902i.out  galaxy_98B_903i.out  galaxy_98B_904i.out  galaxy_98B_905i.out  galaxy_98B_906i.out  galaxy_98B_907i.out  galaxy_98B_908i.out  galaxy_98B_909i.out  galaxy_98B_910i.out  galaxy_98B_911i.out  galaxy_98B_912i.out  (+83 more)
